--- a/TyrionStrategy/TyrionStrategy.vbproj
+++ b/TyrionStrategy/TyrionStrategy.vbproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <MinimumRequiredVersion>9.0</MinimumRequiredVersion>
@@ -56,7 +56,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Configuration" />
     <Reference Include="log4net" />
-    <Reference Include="TradingMotionSDK" />
+    <Reference Include="TradingMotionSDKv2" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -71,7 +71,7 @@
   <ItemGroup>
     <Compile Include="DebugBacktest.vb" />
     <Compile Include="TyrionStrategy.vb">
-      <SubType>TradingMotionSDK</SubType>
+      <SubType>TradingMotionSDKv2</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
